<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mil.nga.giat</groupId>
	<artifactId>geowave-parent</artifactId>
	<version>0.8.0-SNAPSHOT</version>
	<name>geowave-parent</name>
	<packaging>pom</packaging>
	<description>Geowave adds spatio-tempral indexing to accumulo through geotools and geoserver</description>
	<url>https://github.com/ngageoint/geowave</url>
	<licenses>
		<license>
	    	<name>The Apache Software License, Version 2.0</name>
      		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      	</license>
   </licenses>
	<scm>
		<url>https://github.com/ngageoint/geowave.git</url>
		<connection>scm:git:git@github.com:ngageoint/geowave.git</connection>
	</scm>
	

	<properties>
		<geowave.version>0.8.0-SNAPSHOT</geowave.version>
		<geotools.version>11.0</geotools.version>
		<geoserver.version>2.5</geoserver.version>
		<accumulo.version>1.5.0</accumulo.version>
		<hadoop.version>2.0.0-cdh4.5.0</hadoop.version> 
		<hadoop.version.mr>2.0.0-mr1-cdh4.5.0</hadoop.version.mr> 
		
		<!-- 
		Testing out MR2/Yarn
		<hadoop.version>2.3.0-cdh5.0.1</hadoop.version> 
		<hadoop.version.mr>2.3.0-cdh5.0.1</hadoop.version.mr> 
		--> 
				
		<geotools.scope>compile</geotools.scope>
		<accumulo.scope>compile</accumulo.scope>
		<hadoop.scope>compile</hadoop.scope>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<sonar.language>java</sonar.language>
		<!-- Feed Sonar with the JaCoCo integration tests coverage report (that 
			you have previously generated) -->
		<sonar.jacoco.itReportPath>${project.basedir}/../target/coverage-report/jacoco-integration.exec</sonar.jacoco.itReportPath>
		<sonar.jacoco.reportPath>${project.basedir}/../target/coverage-report/jacoco-unit.exec</sonar.jacoco.reportPath>
		<sonar.surefire.reportsPath>${project.build.directory}/surefire-reports</sonar.surefire.reportsPath>
		<sonar.failsafe.reportsPath>${project.build.directory}/failsafe-reports</sonar.failsafe.reportsPath>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		
		<!-- need to use a 64-bit JVM for tests -->
		<!-- Remove the MaxPermSize for Java8 -->
		<test.args>-Xms256m -Xmx6144m -XX:MaxPermSize=512m</test.args> 
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.jacoco</groupId>
										<artifactId>
											jacoco-maven-plugin
										</artifactId>
										<versionRange>
											[0.6.3.201306030806,)
										</versionRange>
										<goals>
											<goal>prepare-agent</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<!-- Compute unit test coverage for Sonar BEWARE: Sonar doesn't run the 
				verify phase, it has to be forced by setting -Dsonar.phase=verify -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.6.3.201306030806</version>
				<configuration>
					<includes>
						<include>mil/nga/giat/geowave**</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>${sonar.jacoco.reportPath}</destFile>
							<propertyName>jacoco.surefire.argLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>pre-integration-test</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>${sonar.jacoco.itReportPath}</destFile>
							<propertyName>jacoco.failsafe.argLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<datafile>${sonar.jacoco.reportPath}</datafile>
						</configuration>
					</execution>
					<execution>
						<id>post-integration-test</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${sonar.jacoco.itReportPath}</dataFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>2.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<argLine>${test.args} ${jacoco.surefire.argLine}</argLine>
					<excludes>
						<exclude>**IT.java</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<modules>
		<module>geowave-index</module>
		<module>geowave-store</module>
		<module>geowave-accumulo</module>
		<module>geowave-gt</module>
		<module>geowave-ingest</module>
		<module>geowave-analytics</module>
		<module>geowave-test</module>
	</modules>

	<repositories>
		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>http://download.osgeo.org/webdav/geotools/</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>opengeo</id>
			<name>OpenGeo Maven Repository</name>
			<url>http://repo.opengeo.org</url>
		</repository>
		<repository>
			<id>cloudera</id>
			<url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<profiles>
		<profile>
			<id>accumulo-container</id>
			<properties>
				<accumulo.scope>provided</accumulo.scope>
				<container.extension>-accumulo-container</container.extension>
			</properties>
		</profile>
		<profile>
			<id>geotools-container</id>
			<properties>
				<geotools.scope>provided</geotools.scope>
				<container.extension>-geotools-container</container.extension>
			</properties>
		</profile>
	</profiles>
</project>